--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             <div class="contact-box">
                 <h3>📧 Contact Us</h3>
                 <p>If you have questions about this privacy policy or your data:</p>
-                <p><strong>Email:</strong> 30secondsgame@gmail.com</p>
+                <p><strong>Email:</strong> joelapexs@gmail.com</p>
                 <p><strong>Response Time:</strong> We respond to all privacy inquiries within 48 hours</p>
             </div>
 
